--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3308/minhascontasPP?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=${URL_DATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=178209
 
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=8081
