--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:mysql://54.163.77.151:3306/minhasContas?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3308/minhascontasPP?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://minhascontas.rdrtech.com.br:3306/minhasContas?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3308/contas?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=178209
 
